creusot/tests/should_fail/unsafe.stderr
warning: unused import: `std::*`
 --> unsafe.rs:2:25
  |
2 | use creusot_contracts::{std::*, *};
  |                         ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
 --> unsafe.rs:8:5
  |
8 |     evil();
  |     ^^^^^^ call to unsafe function
  |
  = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0133`.
